@@ -1,0 +1,11 @@
+package TestAppC3Fail::Schema::DB;
+
+use strict;
+use warnings;
+
+use base 'DBIx::Class::Schema';
+
+__PACKAGE__->load_classes;
+
+1;
+
